src/objects/Affliate__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Affiliate_Agreement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Affiliate_Agreement_on_Box__c</fullName>
        <inlineHelpText>Link to the executed agreement in Box.</inlineHelpText>
        <label>Affiliate Agreement (on Box)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Affiliate_Fee_Based_On__c</fullName>
        <inlineHelpText>This describes what the fee to the partner/affiliate is based on.</inlineHelpText>
        <label>Affiliate Fee Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Cost</fullName>
                </value>
                <value>
                    <fullName>CleanFund Fee</fullName>
                </value>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Executed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The signer on the fee agreement</inlineHelpText>
        <label>Agreement Executed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Affiliate_Parnter_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Date__c</fullName>
        <inlineHelpText>The date the affiliate agreement was first signed.</inlineHelpText>
        <label>Agreement Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Dev_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Dev Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Affiliate_Parnter_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CleanFund_Fee_Range_High__c</fullName>
        <label>CF Fee Range High</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CleanFund_Fee_Range_Low__c</fullName>
        <inlineHelpText>The lower range of the CleanFund fee.</inlineHelpText>
        <label>CF Fee Range Low</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flat_Fee_Amount__c</fullName>
        <label>Flat Fee Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Fee_Notes__c</fullName>
        <inlineHelpText>Notes regarding any flat fee arrangment</inlineHelpText>
        <label>Flat Fee Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geography_Focus__c</fullName>
        <label>Geography Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Budget_Notes__c</fullName>
        <inlineHelpText>Any color on the marketing budget?</inlineHelpText>
        <label>Marketing Budget Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <inlineHelpText>Marketing Budget for the Month.</inlineHelpText>
        <label>Monthly Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Retainer_Notes__c</fullName>
        <inlineHelpText>Any special arrangements for monthly retainer.  Step down schedule, etc.</inlineHelpText>
        <label>Monthly Retainer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Retainer__c</fullName>
        <description>Monthly retainer for this partner</description>
        <label>Monthly Retainer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Short Note Field used for display on reports.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Fee_Range_High__c</fullName>
        <label>Partner Fee Range High (On Cost)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Fee_Range_Low__c</fullName>
        <label>Partner Fee Range Low (On Cost)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Material_Engagement__c</fullName>
        <inlineHelpText>This is for CleanFund Originated deals that the partner has material engagement in.</inlineHelpText>
        <label>Partner Material Engagement</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Originated_Fee__c</fullName>
        <inlineHelpText>Projects originated by Partner and accepted by CF in the Geo. Area of Focus in which Partner performs a material role in the customer acquisition, vendor selection, incentive capture, client communications, or any other activity related to transaction.</inlineHelpText>
        <label>Partner Originated Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Outside_of_Geography__c</fullName>
        <inlineHelpText>Fee for referring clients outside of the Partner&apos;s geography</inlineHelpText>
        <label>Partner Outside of Geography</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Referral_Only__c</fullName>
        <inlineHelpText>These are for CleanFund originated deals where the partner has an exclusive lock on a geographical area.</inlineHelpText>
        <label>Partner Referral Only</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Deals__c</fullName>
        <label>Special Deals</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Affliate__c</fullName>
        <label>Type of Affliate Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical_Focus__c</fullName>
        <label>Vertical Focus</label>
        <type>TextArea</type>
    </fields>
    <label>Affiliate Agreement</label>
    <nameField>
        <label>Affliate  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliate Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>